--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- Primary Meta Tags -->
     <title>Jaideep Cherukuri</title>
     <meta name="title" content="Jaideep Cherukuri" />
-    <meta name="description" content="Jaideep Cherukuri — Personal Portfolio" />
+    <meta name="description" content="Jaideep Cherukuri — Entrepreneur, product builder, and UC Berkeley alum. Building Halofy (HALO), an Agentic Banking OS for the era of intent, agents, and borderless money." />
     <meta name="author" content="Jaideep Cherukuri" />
     <meta name="robots" content="index, follow" />
 
@@ -22,14 +22,14 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Jaideep Cherukuri" />
-    <meta property="og:description" content="Jaideep Cherukuri — Personal Portfolio" />
+    <meta property="og:description" content="Entrepreneur, product builder, and UC Berkeley alum. Building Halofy — an Agentic Banking OS for the era of intent, agents, and borderless money." />
     <meta property="og:site_name" content="Jaideep Cherukuri" />
     <meta property="og:locale" content="en_US" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Jaideep Cherukuri" />
-    <meta name="twitter:description" content="Jaideep Cherukuri — Personal Portfolio" />
+    <meta name="twitter:description" content="Entrepreneur, product builder, and UC Berkeley alum. Building Halofy — an Agentic Banking OS for the era of intent, agents, and borderless money." />
 
     <!-- Preconnect to optimize font/asset loading -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -44,7 +44,9 @@
       "@context": "https://schema.org",
       "@type": "Person",
       "name": "Jaideep Cherukuri",
-      "description": "Personal Portfolio"
+      "jobTitle": "Founder — Halofy",
+      "description": "Entrepreneur, product builder, and UC Berkeley alum. Building the Agentic Banking OS.",
+      "sameAs": ["https://x.com/0xjaideep", "https://www.linkedin.com/in/jaideep-cherukuri"]
     }
     </script>
   </head>
