--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/favicon.svg" />
 
     <!-- Theme Color -->
-    <meta name="theme-color" content="#ffffff" />
-    <meta name="msapplication-TileColor" content="#ffffff" />
+    <meta name="theme-color" content="#000000" />
+    <meta name="msapplication-TileColor" content="#000000" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
