Add OG image for social preview cards (X, LinkedIn)

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Jaideep Cherukuri" />
     <meta property="og:description" content="Entrepreneur, product builder, and UC Berkeley alum. Building Halofy — an Agentic Banking OS for the era of intent, agents, and borderless money." />
+    <meta property="og:image" content="/assets/og-image.png" />
     <meta property="og:site_name" content="Jaideep Cherukuri" />
     <meta property="og:locale" content="en_US" />
 
@@ -30,6 +31,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Jaideep Cherukuri" />
     <meta name="twitter:description" content="Entrepreneur, product builder, and UC Berkeley alum. Building Halofy — an Agentic Banking OS for the era of intent, agents, and borderless money." />
+    <meta name="twitter:image" content="/assets/og-image.png" />
 
     <!-- Preconnect to optimize font/asset loading -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
